[build-system]
requires = ["setuptools~=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calculator-mcp-server"
version = "1.0.0"
description = "A server for complex mathematical calculations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp~=2.10.6",
    "numpy~=2.2.6",
    "scipy~=1.16.1",
    "sympy~=1.14.0",
    "matplotlib~=3.10.5",
    "pydantic~=2.11.7",
]

[project.optional-dependencies]
dev = ["pytest~=8.4.1"]

[project.scripts]
calculator-mcp-server = "calculator_server:main"

[tool.setuptools]
py-modules = ["calculator_server"]
